2. Teaching에 대해서 일부 추가 동작 및 추가 검증이 필요함. 우선 일단락 지음


// Version : 0.0.8
// Grade : ★
// Date : 2016-05-12 ~2016-05-13
// Context

1. ACS Motion Hardware layer
	- MACS Class 작성
	- MMultiAxes_ACS 작성
	- ACS에 Buffer 프로그램 작성 -> PC에서 읽을 각 모터 Status를 2차원 Array에 Copy하는 내용
								   PC에서는 Real 값과 Integer의 배열을 읽어옴.

								   // Version : 0.0.8
// Grade : ★
// Date : 2016-05-26 ~2016-05-28
// Context

1. ACS Motion Hardware layer
	- ACS의 모션 데이터 DB와 연결
	- Servo 위치값,속도,토크 값 읽기 및 Status Bit 상태 확인.
	- MoveToPos,Enable,function 구현
	- HomeSearch 동작 (buffer program Run)
	- ACS Buffer 프로그램에 HomeFlag 추가





////////////////////////////////////////////////////////////////////////////////////////////
// LHS
// Version : 0.0.1
// Grade : ★
// Date : 2016-03-07
// Context
1. MDataManager -> CSystemData -> Scanner ini Data 관리를 위한 Class 배열 선언.
2. MLWDicer -> CreatePolygonScanner() Scanner 갯수 만큼 Hardware Layer 생성하는 Function 추가. : Scanner Max 4 ea
3. UI - FormMessageBox 추가
4. UI - FormLaserMaint Scanner IP, Port 입력 추가

// Version : 0.0.2
// Grade : ★
// Date : 2016-03-21
// Context
// * Polygon Scanner Interface 보완
// 1. TFTP 통신 Protocol 추가
//   - InitializeTFTP()
//   - SendTFTPFile(string strIP, string strFilePath)
// 2. COM Serial 통신 Debugging 수정
//   - Event Handler 생성 해제 위치 변경
//   - Receive Event Byte 사이즈 Read로 변경
// 3. Scanner Interface Test를 위한 Manual UI 추가
//   - FormLaserMaint 
// 4. ImageSave 1빈트 단색 Bitmap 형식으로 저장하도록 수정

// Version : 0.0.3
// Grade : ★
// Date : 2016-03-28
// Context
// * UI 변경
// 1. Axis Operation UI 추가
// 2. IO Operation UI 추가
// 3. Excel IO List Load 추가
//  -  MDataManager -> LoadExcelIOList()
//  - IO List 경로 SFA\LWDicer\SystemData\LWDicer_IO_List.xlsx

// Version : 0.0.4
// Grade : ★
// Date : 2016-04-04
// Context
// * UI 변경
// 1. Axis Operation UI 추가
// 2. Motor Parameter UI 추가 / Motor Parameter Excel File Load,Save 구문 추가
//  - MDataManager -> SaveExcelSystemData(string [,] strParameter)
//  - Motor Data 경로 SFA\LWDicer\SystemData\SystemData.xlsx
