@@ -250,6 +250,7 @@ LWDicer의 DataManager에서 데이터를 읽어오기 위한 3가지 함수 : S
 								   // Version : 0.0.8
 // Grade : ★
 // Date : 2016-05-26 ~2016-05-28
+// Date : 2016-05-30 ~2016-05-31
 // Context
 
 1. ACS Motion Hardware layer
@@ -259,6 +260,9 @@ LWDicer의 DataManager에서 데이터를 읽어오기 위한 3가지 함수 : S
 	- HomeSearch 동작 (buffer program Run)
 	- ACS Buffer 프로그램에 HomeFlag 추가
 
+2. MCtrlStage1 Class
+	- Review & Comment 수정
+	- Cam Calibration 수식에서 부호 바꿈 (반대 방향)
 
 
 
